More code review changes.